@@ -72,9 +72,9 @@ HTML_OUTPUTS = {
         b'text for code.</p><pre class="highlight code python"><span '
         b'class="k">def</span> <span class="nf">foo</span><span class="p">'
         b'(</span><span class="n">bar</span><span class="p">):</span>\n    '
-        b'<span class="c"># Comment</span>\n    <span class="n">a</span> '
+        b'<span class="c1"># Comment</span>\n    <span class="n">a</span> '
         b'<span class="o">=</span> <span class="mi">1</span> <span class="o">'
-        b'+</span> <span class="s">"hubbub"</span>\n    <span class="k">'
+        b'+</span> <span class="s2">"hubbub"</span>\n    <span class="k">'
         b'return</span> <span class="bp">None</span></pre></div><div '
         b'class="step step-level-1" step="3" data-rotate-x="0" '
         b'data-rotate-y="0" data-rotate-z="0" data-scale="1" data-x="5800" '
@@ -122,10 +122,10 @@ HTML_OUTPUTS = {
         b'have\npreformatted text for code.</p><pre class="highlight code'
         b' python"><span class="k">def</span> <span class="nf">foo</span>'
         b'<span class="p">(</span><span class="n">bar</span>'
-        b'<span class="p">):</span>\n    <span class="c">'
+        b'<span class="p">):</span>\n    <span class="c1">'
         b'# Comment</span>\n    <span class="n">a</span> <span class="o">='
         b'</span> <span class="mi">1</span> <span class="o">+</span> <span '
-        b'class="s">"hubbub"</span>\n    <span class="k">return</span> <span '
+        b'class="s2">"hubbub"</span>\n    <span class="k">return</span> <span '
         b'class="bp">None</span></pre></div><div class="step step-level-1" '
         b'step="3" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" '
         b'data-scale="1" data-x="5800" data-y="1600" data-z="0"><p>An image,'
