@@ -58,10 +58,10 @@ class SlideMakerTests(unittest.TestCase):
             b'classes="code python" xml:space="preserve"><inline classes="k">'
             b'def</inline> <inline classes="nf">foo</inline><inline '
             b'classes="p">(</inline><inline classes="n">bar</inline><inline '
-            b'classes="p">):</inline>\n    <inline classes="c"># Comment'
+            b'classes="p">):</inline>\n    <inline classes="c1"># Comment'
             b'</inline>\n    <inline classes="n">a</inline> <inline '
             b'classes="o">=</inline> <inline classes="mi">1</inline> <inline '
-            b'classes="o">+</inline> <inline classes="s">"hubbub"</inline>'
+            b'classes="o">+</inline> <inline classes="s2">"hubbub"</inline>'
             b'\n    <inline classes="k">return</inline> <inline classes="bp">'
             b'None</inline></literal_block></step><step class="step step-level-1"'
             b' step="3"><paragraph>An image, with attributes:</paragraph><image '
